--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
-  </a-scene
+  </a-scene>
 </body>
 </html> 
