--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
+	<a-assets>
+		<a-asset-item id="tom" src="model/scene.gtlf"></a-asset-item>
+	</a-assets>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-entity gltf-model="#tom"></a-entity>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
