--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
     <a-entity gltf-model="#tom"></a-entity>
+    <a-text value="Hello, World!"></a-text>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
