--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</a-assets>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    <a-entity gltf-model="#tom"></a-entity>
+    <a-entity gltf-model="#tom" scale="0.01 0.01 0.01"></a-entity>
     <a-text value="Hello, World!"></a-text>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
